change the structure of the project
Signed-off-by: Janith Disanayake <janithdisanayake@users.noreply.github.com>

--- a/views/films.html
+++ b/views/films.html
@@ -6,8 +6,8 @@
     <title>Go + HTMX</title>
 </head>
 <body>
-    <h1>Hello World</h1>
 
+    <p><b> Title - Director </b></p>
     {{ range .Films }}
         <p> {{ .Title }} - {{ .Director}} </p>
     {{ end }} 
