create componenet using htmx
Signed-off-by: Janith Disanayake <janithdisanayake@users.noreply.github.com>

--- a/views/films.html
+++ b/views/films.html
@@ -2,15 +2,30 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <script src="https://cdn.tailwindcss.com"></script>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
     <title>Go + HTMX</title>
 </head>
 <body>
+    
+    <div 
+        hx-get="/header" 
+        hx-trigger="load">
+    </div>
 
-    <p><b> Title - Director </b></p>
-    {{ range .Films }}
-        <p> {{ .Title }} - {{ .Director}} </p>
-    {{ end }} 
+    <div class="p-5">
+        <p><b> Title - Director </b></p>
+        {{ range .Films }}
+            <p> {{ .Title }} - {{ .Director}} </p>
+        {{ end }} 
+    </div>
+
+    <button hx-get="/films" 
+            hx-target="#buttonTarget">
+      Click Me!
+    </button>
+    <div id="buttonTarget"></div>    
 
 </body>
 </html>
