--- a/views/header.html
+++ b/views/header.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
-    <script src="https://cdn.tailwindcss.com"></script>    
-    <title>Go + HTMX</title>
-</head>
-<body>
+
     <nav class="bg-gray-800">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
@@ -41,7 +32,7 @@
               <div class="hidden sm:ml-6 sm:block">
                 <div class="flex space-x-4">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                  <a href="#" class="text-gray-300 hover:bg-white hover:text-gray-700 rounded-md px-3 py-2 text-sm font-medium hover:bg-gray-900">Dashboard</a>
+                  <a href="/" class="text-gray-300 hover:bg-white hover:text-gray-700 rounded-md px-3 py-2 text-sm font-medium hover:bg-gray-900">Dashboard</a>
                   <a href="/films" class="text-gray-300 hover:bg-white hover:text-gray-700 rounded-md px-3 py-2 text-sm font-medium hover:bg-gray-900">Films</a>
                   <a href="#" class="text-gray-300 hover:bg-white hover:text-gray-700 rounded-md px-3 py-2 text-sm font-medium hover:bg-gray-900">Projects</a>
                   <a href="#" class="text-gray-300 hover:bg-white hover:text-gray-700 rounded-md px-3 py-2 text-sm font-medium hover:bg-gray-900">Calendar</a>
@@ -98,15 +89,3 @@
           </div>
         </div>
       </nav>
-      
-    <h1 class="text-6xl p-20 text-center">Hello World</h1>
-
-    <div class="flex items-center justify-center w-full">
-        <div class="flex w-fit border-black border-4 p-10 rounded-3xl">
-            <img class="h-20 w-auto mx-5" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Go_Logo_Blue.svg/1280px-Go_Logo_Blue.svg.png" alt="Your Company">
-            <img class="h-20 w-auto mx-5" src="https://raw.githubusercontent.com/bigskysoftware/htmx/master/www/static/img/htmx_logo.1.png" width="1000" alt="Your Company" >
-        </div>
-    </div>
-    
-</body>
-</html>
